@@ -58,6 +58,8 @@ Release 2.0.3-alpha - Unreleased
     HDFS-3049. During the normal NN startup process, fall back on a different
     edit log if we see one that is corrupt (Colin Patrick McCabe via todd)
 
+    HDFS-3695. Genericize format() to non-file JournalManagers. (todd)
+
   OPTIMIZATIONS
 
   BUG FIXES 
